adjust cloud connector templates

--- a/nuclei-templates/sap_cloud_connector/sap-cc-default-credentials.yaml
+++ b/nuclei-templates/sap_cloud_connector/sap-cc-default-credentials.yaml
@@ -1,9 +1,9 @@
-id: sap-cloud-connector-detection
+id: sap-cloud-connector-default-credentials
 
 info:
-  name: SAP Cloud Connector detection
+  name: SAP Cloud Connector default credentials check
   author: randomstr1ng
-  severity: info
+  severity: high
   description: This template will detect the SAP Cloud Connector webinterface.
   reference: https://help.sap.com/docs/connectivity/sap-btp-connectivity-cf/cloud-connector
   tags: sap,misconfig
@@ -31,6 +31,8 @@ http:
         part: header
         regex:
           - "Server: Cloud Connector"
+          - "Server: Apache-Coyote"
+        condition: or
 
       - type: status
         status:
