--- a/nuclei-templates/sap_cloud_connector/sap-cloud-connector-detection.yaml
+++ b/nuclei-templates/sap_cloud_connector/sap-cloud-connector-detection.yaml
@@ -26,3 +26,5 @@ http:
         part: header
         regex:
           - "Server: Cloud Connector"
+          - "Server: Apache-Coyote"
+        condition: or
