--- a/nuclei-templates/workflow-sap_cc.yaml
+++ b/nuclei-templates/workflow-sap_cc.yaml
@@ -1,4 +1,9 @@
+id: sap-cloud-connector-workflow
+info:
+  name: SAP Cloud Connector Workflow
+  author: randomstr1ng
+
 workflows:
-  - template: sap_cloud_connector/sap-cloud-connector-detection.yaml
-  subtemplates:
-    - template: sap_cloud_connector/sap-cc-default-credentials.yaml
+  - template: ./sap_cloud_connector/sap-cloud-connector-detection.yaml
+    subtemplates:
+      - template: ./sap_cloud_connector/sap-cc-default-credentials.yaml
