--- a/nuclei-templates/sap_start_service/sap-start-service-detect.yaml
+++ b/nuclei-templates/sap_start_service/sap-start-service-detect.yaml
@@ -10,7 +10,7 @@ info:
 http:
   - method: GET
     path:
-      - '{{BaseURL}}'
+      - '{{BaseURL}}/'
       - '{{BaseURL}}/?wsdl'
     matchers-condition: and
     matchers:
