--- a/nuclei-templates/sap_cloud_connector/sap-cc-default-credentials.yaml
+++ b/nuclei-templates/sap_cloud_connector/sap-cc-default-credentials.yaml
@@ -17,9 +17,9 @@ http:
         POST /j_security_check HTTP/1.1
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
-        Origin: {{BaseURL}}
+        Origin: https://{{Hostname}}
         Connection: keep-alive
-        Referer: {{BaseURL}}
+        Referer: https://{{Hostname}}
 
         j_username=Administrator&j_password=manage
 
