--- a/nuclei-sap-templates/sap_internet_communication_manager/sap-netweaver-icm-detect.yaml
+++ b/nuclei-sap-templates/sap_internet_communication_manager/sap-netweaver-icm-detect.yaml
@@ -1,4 +1,4 @@
-id: sap-netweaver-detect
+id: sap-netweaver-icm-detect
 
 info:
   name: SAP NetWeaver ICM Detection
@@ -7,7 +7,6 @@ info:
   description: Detection of SAP NetWeaver ABAP Webserver (ICM/ICF)
   metadata:
     max-request: 1
-    shodan-query: http.favicon.hash:-266008933
   tags: sap,webserver,tech
 
 http:
