add template for icm info leak from public nuclei-templates repo

--- a/nuclei-sap-templates/workflow-sap-internet-communication-manager.yaml
+++ b/nuclei-sap-templates/workflow-sap-internet-communication-manager.yaml
@@ -8,3 +8,4 @@ workflows:
     subtemplates:
       - template: /tools/nuclei-sap-templates/sap_internet_communication_manager/sap-netweaver-webgui.yaml
       - template: /tools/nuclei-sap-templates/sap_internet_communication_manager/sap-netweaver-fiori-launchpad.yaml
+      - template: /tools/nuclei-sap-templates/sap_internet_communication_manager/sap-netweaver-info-leak.yaml
