add sap-soap-rfc-detection to workflow-sap-rfc

--- a/nuclei-sap-templates/workflow-sap-rfc.yaml
+++ b/nuclei-sap-templates/workflow-sap-rfc.yaml
@@ -7,3 +7,4 @@ workflows:
   - template: /tools/nuclei-sap-templates/sap_rfc/sap-rfc-gateway-detect.yaml
     subtemplates:
       - template: /tools/nuclei-sap-templates/sap_rfc/sap-rfc-gateway-monitor-detect.yaml
+      - template: /tools/nuclei-sap-templates/sap_rfc/sap-soap-rfc-detection.yaml
