bugfix matcher sap-netweaver-admin-detection.yaml

--- a/nuclei-sap-templates/sap_java_webservices/sap-netweaver-admin-detection.yaml
+++ b/nuclei-sap-templates/sap_java_webservices/sap-netweaver-admin-detection.yaml
@@ -17,7 +17,7 @@ http:
         part: header
         words:
           - "SAP NetWeaver Application Server"
-          - "SAP JAVA"
+          - "AS JAVA"
       - type: word
         part: body
         words:
