add detection of ase dataserver #17

--- a/nuclei-sap-templates/sap_ase/sap-ase-dataserver-detect.yaml
+++ b/nuclei-sap-templates/sap_ase/sap-ase-dataserver-detect.yaml
@@ -1,7 +1,7 @@
 id: sap-ase-dataserver-detect
 
 info:
-  name: SAP ASE Service Detection
+  name: SAP ASE Dataserver Detection
   author: randomstr1ng
   severity: info
   description: Detection of SAP ASE Dataserver service which is used for storing and managing data in SAP systems.
