--- a/nuclei-sap-templates/workflow-sap-all.yaml
+++ b/nuclei-sap-templates/workflow-sap-all.yaml
@@ -45,3 +45,6 @@ workflows:
     subtemplates:
     - template: /tools/nuclei-sap-templates/sap_java_webservices/sap-java-portal-detection.yaml
     - template: /tools/nuclei-sap-templates/sap_java_webservices/sap-netweaver-admin-detection.yaml
+# SAP ASE Database (Sybase)
+  - template: /tools/nuclei-sap-templates/sap_ase/sap-ase-dataserver-detect.yaml
+  - template: /tools/nuclei-sap-templates/sap_ase/sap-ase-backupserver-detect.yaml
