add igs admin trace and dump command check

--- a/nuclei-sap-templates/wokflow-sap-internet-graphics-server.yaml
+++ b/nuclei-sap-templates/wokflow-sap-internet-graphics-server.yaml
@@ -8,3 +8,4 @@ workflows:
     subtemplates:
       - template: /tools/nuclei-sap-templates/sap_internet_graphics_service/CVE-2018-2392.yaml
       - template: /tools/nuclei-sap-templates/sap_internet_graphics_service/sap-igs-admin-commands.yaml
+      - template: /tools/nuclei-sap-templates/sap_internet_graphics_service/sap-igs-admin-config-check.yaml
