--- a/nuclei-sap-templates/workflow-sap-java-webservices.yaml
+++ b/nuclei-sap-templates/workflow-sap-java-webservices.yaml
@@ -8,3 +8,4 @@ workflows:
     subtemplates:
     - template: /tools/nuclei-sap-templates/sap_java_webservices/sap-java-portal-detection.yaml
     - template: /tools/nuclei-sap-templates/sap_java_webservices/sap-netweaver-admin-detection.yaml
+    - template: /tools/nuclei-sap-templates/sap_java_webservices/sap-java-visual-composer-vuln-check.yaml
